# skeleton-environment

./: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-skeleton-environment-project  bazel-testlogs  docker-compose.yaml  skeleton-project-cluster-diagram
bazel-rules/: pip3_repository.bzl
documentation/: grafana-tutorial.md
python_server/: BUILD.bazel  Pipfile  deployment.yaml  dockerfile  main.py  requirements.txt  service.yaml
python_server/tests/: test_main.py
system/: prometheus.yaml
system/monitoring/: grafana-config.yaml  grafana-deployment.yaml  grafana-service.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml
